--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <div id="board">
       <table>
         <tr>
-          <td class="board"></td>
-          <td></td>
-          <td></td>
+          <td class="board" id="0"></td>
+          <td class="board" id="1"></td>
+          <td class="board" id="2"></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td class="board" id="3"></td>
+          <td class="board" id="4"></td>
+          <td class="board" id="5"></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td class="board" id="6"></td>
+          <td class="board" id="7"></td>
+          <td class="board" id="8"></td>
         </tr>
       </table>
     </div>
