--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
   <body>
     <div id="app"></div>
+    <h1>Tic Tac Toe</h1>
     <div id="board">
-      <table>
+      <table class="center">
         <tr>
           <td class="board" id="0"></td>
           <td class="board" id="1"></td>
@@ -25,6 +26,9 @@
           <td class="board" id="8"></td>
         </tr>
       </table>
+    </div>
+    <div class="reset">
+      <button>Reset</button>
     </div>
     <script src="src/index.js"></script>
   </body>
