--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   </head>
 
   <body>
+    <div id="modals" class="modal">
+      <div class="modal-content">
+        <div class="close"><span>&times;</span></div>
+        <p>Game Over</p>
+        <p>You Win!!</p>
+      </div>
+    </div>
     <div id="app"></div>
     <h1>Tic Tac Toe</h1>
     <div id="board">
