--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="modal-content">
         <div class="close"><span>&times;</span></div>
         <p>Game Over</p>
-        <p>You Win!!</p>
+        <p>Winner:<span id="winner"></span></p>
       </div>
     </div>
     <div id="app"></div>
